# lazyAItrading

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-sim-gemini.yml  daily-sim.yml
artifacts/: decisions.jsonl  equity.jsonl
artifacts/models/: eval.json  tiny.json  tiny.pt
artifacts/picks/: picks-20251001-155023.csv
artifacts/state/: portfolio.json
artifacts/trades/: trades.jsonl
artifacts_gemini/: decisions.jsonl  equity.jsonl  trades.jsonl
data/cache/: ohlcv_0920734c80ec5c9f.json  ohlcv_312bace97cc8beb3.json  ohlcv_4422a5a682fd72e5.json  ohlcv_695a44f2fb97a89a.json  ohlcv_6be7947cd9b87dbe.json  ohlcv_6e4c29bbd5f5263f.json  ohlcv_76cee4500a0cf5a2.json  ohlcv_777874b349e36434.json  ohlcv_95d1d43941e670c7.json  ohlcv_a43c9c6990c04c01.json  ohlcv_b6f8c5078dc2e9a9.json  ohlcv_ca6d4a597518cc9e.json  ohlcv_d2aa60344fd0ea8b.json  ohlcv_dbda2c8d05110d81.json  ohlcv_dfa230dadd73b24d.json  ohlcv_e870a4be9c2fe839.json  ohlcv_f30b013239ec95cf.json
data/history/: AAPL_1d_1y.csv  AMZN_1d_1y.csv  GOOGL_1d_1y.csv  META_1d_1y.csv  MSFT_1d_1y.csv  NVDA_1d_1y.csv
data/universes/: sp500.csv  test_universe.csv
src/: backtest_cli.py  cli.py  predict_cli.py  runner_daily.py  runner_gemini.py  train.py  train_torch.py
src/agents/: base.py  risk.py  technical.py
src/backtest/: engine.py  portfolio.py
src/core/: orchestrator.py  types.py
src/data/: cache.py  features.py  fetch.py  history.py
src/llm/: gemini_client.py
tests/: test_backtest.py  test_features.py  test_orchestrator.py  test_technical_agent.py  test_universe.py
(+15 files in other folders)
