[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-agents"
version = "0.0.1"
description = "Custom AI trading multi-agent system"
authors = [{name = "you"}]
requires-python = ">=3.11"
dependencies = [
	"numpy>=1.26",
	"yfinance>=0.2.40",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
